--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Formulario">
+
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="412dp"
         android:layout_height="71dp"
         android:background="#AEDEF4"
@@ -24,7 +26,162 @@
             android:src="@drawable/_023_04_19_08_32_05_bienvenido_a_fisioretiro_com___fisioretiro_com_removebg_preview" />
     </LinearLayout>
 
+    <ScrollView
+        android:layout_width="409dp"
+        android:layout_height="533dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.44">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="29dp"
+                android:layout_marginTop="16dp"
+                android:text="Formulario de lesion"
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout6"
+                android:layout_width="345dp"
+                android:layout_height="109dp"
+                android:layout_marginStart="49dp"
+                android:layout_marginEnd="21dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="136dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:text="Tipo:"
+                    android:textSize="20sp" />
+
+                <Spinner
+                    android:id="@+id/spinner2"
+                    android:layout_width="228dp"
+                    android:layout_height="match_parent"
+                    android:entries="@array/tipo"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout7"
+                android:layout_width="345dp"
+                android:layout_height="109dp"
+                android:layout_marginStart="49dp"
+                android:layout_marginEnd="21dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="136dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:text="NºEjercicios:"
+                    android:textSize="20sp" />
+
+                <Spinner
+                    android:id="@+id/spinner3"
+                    android:layout_width="228dp"
+                    android:layout_height="match_parent"
+                    android:entries="@array/ejercicios"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout5"
+                android:layout_width="345dp"
+                android:layout_height="109dp"
+                android:layout_marginStart="49dp"
+                android:layout_marginEnd="21dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="136dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:text="ubicación:"
+                    android:textSize="20sp" />
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="228dp"
+                    android:layout_height="match_parent"
+                    android:entries="@array/localizacion"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout8"
+                android:layout_width="345dp"
+                android:layout_height="109dp"
+                android:layout_marginStart="49dp"
+                android:layout_marginEnd="21dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="136dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:text="Email del cliente:"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/editTextText"
+                    android:layout_width="191dp"
+                    android:layout_height="62dp"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Email"
+                    android:inputType="text" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="164dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="128dp"
+                android:layout_marginTop="17dp"
+                android:layout_marginEnd="123dp"
+                android:backgroundTint="#AEDEF4"
+                android:text="Crear Rutina"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
+
+        </LinearLayout>
+    </ScrollView>
+
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="416dp"
         android:layout_height="70dp"
         android:background="#AEDEF4"
