--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -7,229 +7,228 @@
     tools:context=".Formulario">
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="412dp"
-        android:layout_height="71dp"
-        android:background="#AEDEF4"
-        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:layout_weight="1"
-            android:src="@drawable/_023_04_19_08_32_05_bienvenido_a_fisioretiro_com___fisioretiro_com_removebg_preview" />
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="533dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.44">
-
         <LinearLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="71dp"
+            android:background="#AEDEF4"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView3"
+            <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="29dp"
-                android:layout_marginTop="16dp"
-                android:text="Formulario de lesion"
-                android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginTop="3dp"
+                android:layout_weight="1"
+                android:src="@drawable/_023_04_19_08_32_05_bienvenido_a_fisioretiro_com___fisioretiro_com_removebg_preview" />
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="600dp">
 
             <LinearLayout
-                android:id="@+id/linearLayout6"
-                android:layout_width="345dp"
-                android:layout_height="109dp"
-                android:layout_marginStart="49dp"
-                android:layout_marginEnd="21dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="136dp"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
-                    android:text="Tipo:"
-                    android:textSize="20sp" />
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:layout_marginStart="29dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Formulario de lesion"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <Spinner
-                    android:id="@+id/spinner2"
-                    android:layout_width="228dp"
-                    android:layout_height="match_parent"
-                    android:entries="@array/tipo"
-                    android:textAlignment="center" />
+                <LinearLayout
+                    android:id="@+id/linearLayout6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="136dp"
+                        android:layout_height="48dp"
+                        android:layout_weight="1"
+                        android:text="Tipo:"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/spinner2"
+                        android:layout_width="228dp"
+                        android:layout_height="match_parent"
+                        android:entries="@array/tipo"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="136dp"
+                        android:layout_height="48dp"
+                        android:layout_weight="1"
+                        android:text="NºEjercicios:"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/spinner3"
+                        android:layout_width="228dp"
+                        android:layout_height="match_parent"
+                        android:entries="@array/ejercicios"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="136dp"
+                        android:layout_height="48dp"
+                        android:layout_weight="1"
+                        android:text="Ubicación:"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/spinner"
+                        android:layout_width="228dp"
+                        android:layout_height="match_parent"
+                        android:entries="@array/localizacion"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="136dp"
+                        android:layout_height="48dp"
+                        android:layout_weight="1"
+                        android:text="Email del cliente:"
+                        android:textSize="20sp" />
+
+                    <EditText
+                        android:id="@+id/editTextText"
+                        android:layout_width="191dp"
+                        android:layout_height="62dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Email"
+                        android:inputType="text" />
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="164dp"
+                    android:layout_height="80dp"
+                    android:layout_margin="20dp"
+                    android:layout_marginStart="128dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginEnd="123dp"
+                    android:backgroundTint="#AEDEF4"
+                    android:text="Crear Rutina"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
+
             </LinearLayout>
+        </ScrollView>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="#AEDEF4"
+            android:orientation="horizontal"
+            android:paddingTop="10dp"
+            android:layout_margin="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/linearLayout">
 
-            <LinearLayout
-                android:id="@+id/linearLayout7"
-                android:layout_width="345dp"
-                android:layout_height="109dp"
-                android:layout_marginStart="49dp"
-                android:layout_marginEnd="21dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
+            <ImageButton
+                android:id="@+id/personal"
+                android:layout_width="115dp"
+                android:layout_height="47dp"
+                android:layout_margin="1dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="50dp"
+                android:layout_weight="1"
+                android:background="#00FFFFFF"
+                android:scaleType="centerInside"
+                android:src="@drawable/_023_04_19_08_52_38_logo_persona___b_squeda_de_google_removebg_preview" />
 
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="136dp"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
-                    android:text="NºEjercicios:"
-                    android:textSize="20sp" />
+            <ImageButton
+                android:id="@+id/inicio"
+                android:layout_width="115dp"
+                android:layout_height="47dp"
+                android:layout_margin="1dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="1dp"
+                android:layout_weight="1"
+                android:background="#00FFFFFF"
+                android:scaleType="centerInside"
+                android:src="@drawable/pngwing_com" />
 
-                <Spinner
-                    android:id="@+id/spinner3"
-                    android:layout_width="228dp"
-                    android:layout_height="match_parent"
-                    android:entries="@array/ejercicios"
-                    android:textAlignment="center" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayout5"
-                android:layout_width="345dp"
-                android:layout_height="109dp"
-                android:layout_marginStart="49dp"
-                android:layout_marginEnd="21dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3">
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="136dp"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
-                    android:text="ubicación:"
-                    android:textSize="20sp" />
-
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:layout_width="228dp"
-                    android:layout_height="match_parent"
-                    android:entries="@array/localizacion"
-                    android:textAlignment="center" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayout8"
-                android:layout_width="345dp"
-                android:layout_height="109dp"
-                android:layout_marginStart="49dp"
-                android:layout_marginEnd="21dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="136dp"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
-                    android:text="Email del cliente:"
-                    android:textSize="20sp" />
-
-                <EditText
-                    android:id="@+id/editTextText"
-                    android:layout_width="191dp"
-                    android:layout_height="62dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="Email"
-                    android:inputType="text" />
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="164dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="128dp"
-                android:layout_marginTop="17dp"
-                android:layout_marginEnd="123dp"
-                android:backgroundTint="#AEDEF4"
-                android:text="Crear Rutina"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
+            <ImageButton
+                android:id="@+id/formularios"
+                android:layout_width="115dp"
+                android:layout_height="47dp"
+                android:layout_margin="1dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="1dp"
+                android:layout_weight="1"
+                android:background="#90E4DFDF"
+                android:scaleType="centerInside"
+                android:src="@drawable/_04090" />
 
         </LinearLayout>
-    </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="416dp"
-        android:layout_height="70dp"
-        android:background="#AEDEF4"
-        android:orientation="horizontal"
-        android:paddingTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageButton
-            android:id="@+id/personal"
-            android:layout_width="115dp"
-            android:layout_height="47dp"
-            android:layout_margin="1dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginTop="50dp"
-            android:layout_weight="1"
-            android:background="#00FFFFFF"
-            android:scaleType="centerInside"
-            android:src="@drawable/_023_04_19_08_52_38_logo_persona___b_squeda_de_google_removebg_preview" />
-
-        <ImageButton
-            android:id="@+id/inicio"
-            android:layout_width="115dp"
-            android:layout_height="47dp"
-            android:layout_margin="1dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginTop="1dp"
-            android:layout_weight="1"
-            android:background="#00FFFFFF"
-            android:scaleType="centerInside"
-            android:src="@drawable/pngwing_com" />
-
-        <ImageButton
-            android:id="@+id/formularios"
-            android:layout_width="115dp"
-            android:layout_height="47dp"
-            android:layout_margin="1dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginTop="1dp"
-            android:layout_weight="1"
-            android:background="#90E4DFDF"
-            android:scaleType="centerInside"
-            android:src="@drawable/_04090" />
-
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
