--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -9,16 +9,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="71dp"
+            android:layout_weight="0.5"
             android:background="#AEDEF4"
             android:orientation="horizontal">
 
@@ -32,12 +28,15 @@
         </LinearLayout>
 
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="600dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="10">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -159,35 +158,72 @@
                         android:inputType="text" />
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="164dp"
-                    android:layout_height="80dp"
-                    android:layout_margin="20dp"
-                    android:layout_marginStart="128dp"
-                    android:layout_marginTop="17dp"
-                    android:layout_marginEnd="123dp"
-                    android:backgroundTint="#AEDEF4"
-                    android:text="Crear Rutina"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center|center_vertical"
+                    android:orientation="horizontal">
+
+
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="168dp"
+                        android:layout_height="99dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginStart="128dp"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginEnd="123dp"
+                        android:backgroundTint="#AEDEF4"
+                        android:text="Confirmar Datos"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
+
+                    <Button
+                        android:id="@+id/button2"
+                        android:layout_width="168dp"
+                        android:layout_height="99dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginStart="128dp"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginEnd="123dp"
+                        android:backgroundTint="#AEDEF4"
+                        android:text="Crear Rutina"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textView28"
+                    android:layout_width="136dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:visibility="invisible" />
+
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="100dp"
+                    android:layout_weight="1"
+                    android:text=" "
+                    android:textSize="20sp" />
+
 
             </LinearLayout>
         </ScrollView>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+
         <LinearLayout
-            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:layout_weight="0.5"
             android:background="#AEDEF4"
             android:orientation="horizontal"
-            android:paddingTop="10dp"
-            android:layout_margin="0dp"
-            app:layout_constraintBottom_toBottomOf="@id/linearLayout">
+            android:paddingTop="10dp">
 
             <ImageButton
                 android:id="@+id/personal"
